--- a/TravelExpenses/Views/Comprobacion/ComprobacionSolicitud.cshtml
+++ b/TravelExpenses/Views/Comprobacion/ComprobacionSolicitud.cshtml
@@ -38,8 +38,8 @@
                                 <td>@item.Folio</td>
                                 <td>@item.Descripcion</td>
                                 <td>@item.UserName</td>
-                                <td>@item.ImporteSolicitado </td>
-                                <td>@item.ImporteComprobado </td>
+                                <td>@string.Format("{0:C}",item.ImporteSolicitado )</td>
+                                <td>@string.Format("{0:C}", item.ImporteComprobado) </td>
 
                                 <td>@item.Estatus</td>
 
@@ -96,8 +96,8 @@
                                     + '<td>' + item.folio +'</td>'
                                     + '<td>' + item.descripcion +'</td>'
                                     + '<td>' + item.userName +'</td>'
-                                    + '<td>' + item.importeSolicitado +'</td>'
-                                    + '<td>' + item.importeComprobado +'</td>'
+                                    + '<td>' + item.importeSolicitadoC +'</td>'
+                                    + '<td>' + item.importeComprobadoC +'</td>'
                                     + '<td>' + item.estatus+'</td>'
                                     + '<td>'
                             +'<a class="btn btn-lg" href="/Comprobacion/DetallesPorAutorizar?folio=' + item.folio + '">'
@@ -113,8 +113,8 @@
                                 + '<td>' + item.folio +'</td>'
                                 + '<td>' + item.descripcion +'</td>'
                                 + '<td>' + item.userName +'</td>'
-                                + '<td>' + item.importeSolicitado +'</td>'
-                                + '<td>' + item.importeComprobado +'</td>'
+                                + '<td>' + item.importeSolicitadoC +'</td>'
+                                + '<td>' + item.importeComprobadoC +'</td>'
                                 + '<td>' + item.estatus+'</td>'
                                 + '<td>'
                             +'<a class="btn btn-lg"  href="/Comprobacion/Detalles?folio=' + item.folio + '">'
