--- a/TravelExpenses/wwwroot/css/style.css
+++ b/TravelExpenses/wwwroot/css/style.css
@@ -9168,9 +9168,9 @@ pre code {
 }
 
 @media (min-width: 1200px) {
-  .container {
-    max-width: 1140px;
-  }
+    .container {
+        max-width: 100%;
+    }
 }
 
 .container-fluid {
