--- a/TravelExpenses/Views/Rembolso/Edit.cshtml
+++ b/TravelExpenses/Views/Rembolso/Edit.cshtml
@@ -20,19 +20,22 @@
                 @if (Model.solicitud != null)
                 {
                     <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-                                <label class="control-label">Folio Solicitud: @Model.solicitud.Folio</label>
-                                <label class="control-label">Departamento: @Model.solicitud.Departamento</label>
-                                <label class="control-label">Importe Solicitado: </label> @String.Format("{0:C}", Model.solicitud.ImporteSolicitado)
+                        <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
+
+                            <label class="control-label">Folio Solicitud: @Model.solicitud.Folio</label>
+                            <label class="control-label">Departamento: @Model.solicitud.Departamento</label>
+                            <label class="control-label">Importe Solicitado: </label> @String.Format("{0:C}", Model.solicitud.ImporteSolicitado)
+                        </div>    
+                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+                                <form method="post">
+                                    @*<a class="btn btn-lg" asp-controller="Rembolso" asp-action="EnviarReembolso" asp-route-foliosolicitud="@Model.solicitud.Folio">
+                Enviar para Autorización
+                <i class="fas fa-paper-plane" style="color:blue"></i>
+            </a>*@
+                                    <button asp-controller="Rembolso" asp-action="EnviarReembolso" asp-route-foliosolicitud="@Model.solicitud.Folio" class="btn btn-primary">Solicitar Autorización</button>
+                                    </form>
                             </div>
-                            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                                <a class="btn btn-lg" asp-controller="Rembolso" asp-action="EnviarReembolso" asp-route-foliosolicitud="@Model.solicitud.Folio">
-                                    Enviar para Autorización
-                                    <i class="fas fa-paper-plane" style="color:blue"></i>
-                                </a>
-                            </div>
-                        </div>
+                        
                     </div>
                 }
                 <div class="row dropzone-area">
