--- a/TravelExpenses/Views/Rembolso/Lista.cshtml
+++ b/TravelExpenses/Views/Rembolso/Lista.cshtml
@@ -6,7 +6,7 @@
     Layout = "/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Reembolsos</h1>
+<h1>Comprobación/Rembolso</h1>
 
 
 <div class="col-12 grid-margin stretch-card">
