--- a/TravelExpenses/Views/Roles/_AddUserToRole.cshtml
+++ b/TravelExpenses/Views/Roles/_AddUserToRole.cshtml
@@ -57,7 +57,7 @@
         <input type="hidden" class="btn btn-primary" asp-for="Delete" value="false" id="Eliminar" />
         <input type="hidden" class="btn btn-primary" asp-for="DeleteUser" value="false" id="DeleteUser" />
         <input type="hidden" class="btn btn-primary" asp-for="Consultar" value="false" id="Consultar" />
-        <input type="submit" class="btn btn-primary" value="Eliminar Role" onclick="document.getElementById('delete').value = 'true'" />
+        <input type="submit" class="btn btn-primary" value="Eliminar Role" onclick="document.getElementById('Eliminar').value = 'true'" />
 
     </form>
    
