--- a/TravelExpenses/Views/Shared/_Menu.cshtml
+++ b/TravelExpenses/Views/Shared/_Menu.cshtml
@@ -6,12 +6,15 @@
     <ul class="nav">
         @if (SignInManager.IsSignedIn(User))
         {
+            
             <li class="nav-item">
                 <a class="nav-link" asp-page="/">
                     <i class="mdi mdi-home menu-icon"></i>
                     <span class="menu-title">Inicio</span>
                 </a>
             </li>
+            if (User.IsInRole("Admin"))
+            {
             <li class="nav-item">
                 <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
                     <i class="mdi mdi-file-document-box-outline menu-icon"></i>
@@ -31,6 +34,7 @@
                     </ul>
                 </div>
             </li>
+            }
             if (User.IsInRole("Admin"))
             {
                 <li class="nav-item">
@@ -51,7 +55,8 @@
                 </li>
 
             }
-
+            if (User.IsInRole("Solicitante") || User.IsInRole("Procesador") || User.IsInRole("Aprobador") || User.IsInRole("Admin"))
+            {
             <li class="nav-item">
                 <a class="nav-link" data-toggle="collapse" href="#ui-basic3" aria-expanded="false" aria-controls="ui-basic3">
 
@@ -65,6 +70,9 @@
                     </ul>
                 </div>
             </li>
+            }
+            if (User.IsInRole("Aprobador") || User.IsInRole("Procesador") || User.IsInRole("Admin"))
+            {
             <li class="nav-item">
                 <a class="nav-link" data-toggle="collapse" href="#ui-basic2" aria-expanded="false" aria-controls="ui-basic2">
 
@@ -79,6 +87,9 @@
                     </ul>
                 </div>
             </li>
+            }
+            if (User.IsInRole("Procesador") ||User.IsInRole("Admin"))
+            {
             <li class="nav-item">
                 <a class="nav-link" data-toggle="collapse" href="#ui-basic2" aria-expanded="false" aria-controls="ui-basic2">
                     <i class="mdi mdi-account menu-icon"></i>
@@ -92,6 +103,7 @@
                     </ul>
                 </div>
             </li>
+            }
         }
     </ul>
 </nav>
