--- a/TravelExpenses/Views/Shared/_Menu.cshtml
+++ b/TravelExpenses/Views/Shared/_Menu.cshtml
@@ -8,7 +8,7 @@
         {
 
             <li class="nav-item">
-                <a class="nav-link" asp-page="/" asp-controller="Home" asp-action="Default">
+                <a class="nav-link" asp-controller="Home" asp-action="Default">
                     <i class="mdi mdi-home menu-icon"></i>
                     <span class="menu-title">Inicio</span>
                 </a>
